# common_suturo1718

./: .gitmodules  README.md
interactiv_marker_publisher/: CMakeLists.txt  package.xml
interactiv_marker_publisher/include/interactiv_marker_publisher/: interactiv_marker_publisher.h
interactiv_marker_publisher/src/: interactiv_marker_publisher.cpp
marker_publisher/: CMakeLists.txt  package.xml
marker_publisher/include/marker_publisher/: marker_publisher.h
marker_publisher/src/: marker_publisher.cpp
pcd_files/: all.txt  filenames.txt
pcd_files/CupEcoOrange/: CupEcoOrange_30_0.pcd  CupEcoOrange_30_0_colors_histogram.csv  CupEcoOrange_30_0_curvature.csv  CupEcoOrange_30_0_normals_histogram.csv  CupEcoOrange_30_1.pcd  CupEcoOrange_30_10.pcd  CupEcoOrange_30_10_colors_histogram.csv  CupEcoOrange_30_10_curvature.csv  CupEcoOrange_30_10_normals_histogram.csv  CupEcoOrange_30_11.pcd  CupEcoOrange_30_11_colors_histogram.csv  CupEcoOrange_30_11_curvature.csv  CupEcoOrange_30_11_normals_histogram.csv  CupEcoOrange_30_12.pcd  CupEcoOrange_30_12_colors_histogram.csv  CupEcoOrange_30_12_curvature.csv  CupEcoOrange_30_12_normals_histogram.csv  CupEcoOrange_30_13.pcd  CupEcoOrange_30_13_colors_histogram.csv  CupEcoOrange_30_13_curvature.csv  CupEcoOrange_30_13_normals_histogram.csv  CupEcoOrange_30_14.pcd  CupEcoOrange_30_14_colors_histogram.csv  CupEcoOrange_30_14_curvature.csv  CupEcoOrange_30_14_normals_histogram.csv  CupEcoOrange_30_15.pcd  CupEcoOrange_30_15_colors_histogram.csv  CupEcoOrange_30_15_curvature.csv  CupEcoOrange_30_15_normals_histogram.csv  CupEcoOrange_30_16.pcd  CupEcoOrange_30_16_colors_histogram.csv  CupEcoOrange_30_16_curvature.csv  CupEcoOrange_30_16_normals_histogram.csv  CupEcoOrange_30_17.pcd  CupEcoOrange_30_17_colors_histogram.csv  CupEcoOrange_30_17_curvature.csv  CupEcoOrange_30_17_normals_histogram.csv  CupEcoOrange_30_18.pcd  CupEcoOrange_30_18_colors_histogram.csv  CupEcoOrange_30_18_curvature.csv  (+809 more)
pcd_files/EdekaRedBowl/: EdekaRedBowl_30_0.pcd  EdekaRedBowl_30_0_colors_histogram.csv  EdekaRedBowl_30_0_curvature.csv  EdekaRedBowl_30_0_normals_histogram.csv  EdekaRedBowl_30_1.pcd  EdekaRedBowl_30_10.pcd  EdekaRedBowl_30_10_colors_histogram.csv  (+829 more)
(+11540 files in other folders)
