<?xml version="1.0"?>
<package>
  <name>interactiv_marker_publisher</name>
  <version>0.0.0</version>
  <description>The knowledge package</description>

  <maintainer email="roman@todo.todo">roman</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>interactive_markers</build_depend>
  <run_depend>interactive_markers</run_depend>
</package>
