<?xml version="1.0"?>
<package>
  <name>marker_publisher</name>
  <version>0.0.0</version>
  <description>The knowledge package</description>

  <maintainer email="roman@todo.todo">roman</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
